[tool.poetry]
name = "spycatapi"
version = "0.1.0"
description = ""
authors = ["ImperatorNeron <katebarspk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.5"}
pydantic = "^2.9.2"
scons = "^4.8.1"
sqlalchemy = {extras = ["asyncpg"], version = "^2.0.36"}
alembic = "^1.14.0"
asyncpg = "^0.30.0"
punq = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
